# greentic-component

./: .gitignore  CHANGELOG.md  Cargo.toml  MIGRATION_STATUS.md  Makefile  README.md  SECURITY.md  rust-toolchain.toml
.codex/: ACT-PR-01.md  ACT-PR-02.md  PR-00-VISION.md  PR-01-DEPRECATION-SIGNALS.md  PR-01-public-wit.md  PR-01-runtime-contract-tightening.md  PR-02-DOCS-SWEEP.md  PR-02.md  PR-05.md  PR-07.md  README.md  STATE.json  repo_overview.md
.codex/done/: ACT-PR-03.md  PR-01.md  PR-02-docs-and-examples.md  PR-02-old.md  PR-03-old.md  PR-03.md  PR-04.md  PR-06.md  StatePR-04.md
.github/actions/diag/: action.yml
.github/actions/rust-setup/: action.yml
.github/workflows/: auto-tag.yml  ci.yml  pages.yml  publish.yml
ci/: check_local.sh  check_no_bindings_imports.sh  check_no_duplicate_canonical_wit.sh  local_check.sh
crates/component-manifest/: Cargo.toml
crates/component-manifest/src/: lib.rs  schema.rs  types.rs
crates/component-manifest/tests/: manifest_valid.rs
crates/component-runtime/: Cargo.toml
crates/component-runtime/src/: binder.rs  error.rs  host_imports.rs  invoker.rs  lib.rs  loader.rs  policy.rs
crates/component-store/: Cargo.toml
crates/component-store/src/: fs.rs  http.rs  lib.rs  verify.rs  warg.rs
crates/component-store/tests/: fs_list.rs  http_fetch.rs
crates/greentic-component/: Cargo.toml
crates/greentic-component-runtime/: Cargo.toml
crates/greentic-component-runtime/src/: binder.rs  error.rs  host_imports.rs  invoker.rs  loader.rs  policy.rs
crates/greentic-component-store/: Cargo.toml
crates/greentic-component-store/src/: http.rs  lib.rs  oci.rs
crates/greentic-component-store/tests/: fs_list.rs  http_fetch.rs
crates/greentic-component/assets/templates/component/rust-wasi-p2-min/: Cargo.toml.hbs  Makefile.hbs  README.md.hbs  build.rs.hbs  component.manifest.json.hbs  rust-toolchain.toml.hbs
crates/greentic-component/assets/templates/component/rust-wasi-p2-min/.cargo/: config.toml.hbs
crates/greentic-component/assets/templates/component/rust-wasi-p2-min/schemas/io/: input.schema.json.hbs  output.schema.json.hbs
crates/greentic-component/assets/templates/component/rust-wasi-p2-min/src/: lib.rs.hbs
crates/greentic-component/assets/templates/component/rust-wasi-p2-min/tests/: conformance.rs.hbs
crates/greentic-component/assets/templates/component/rust-wasi-p2-min/wit/: world.wit.hbs
crates/greentic-component/examples/: gen_contract_fixture.rs  gen_fixture.rs
crates/greentic-component/schemas/v1/: component.manifest.schema.json
crates/greentic-component/src/: abi.rs  capabilities.rs  cli.rs  describe.rs  error.rs  lib.rs  limits.rs  loader.rs  prepare.rs  schema.rs  schema_quality.rs  security.rs  wasm.rs
crates/greentic-component/src/cmd/: build.rs  component_world.rs  doctor.rs  flow.rs  hash.rs  inspect.rs  mod.rs  new.rs  path.rs  store.rs  templates.rs  test.rs  wizard.rs
crates/greentic-component/src/manifest/: mod.rs
crates/greentic-component/src/scaffold/: deps.rs  engine.rs  mod.rs  validate.rs
crates/greentic-component/src/store/: cache.rs  fs_source.rs  meta.rs  mod.rs  oci_source.rs
crates/greentic-component/src/test_harness/: linker.rs  mod.rs  secrets.rs  state.rs
crates/greentic-component/tests/: build_strictness.rs  capability_tests.rs  cli_tests.rs  contract_tests.rs  doctor_wizard_tests.rs  flow_regen.rs  flow_scaffold.rs  flow_update.rs  loader_tests.rs  manifest_tests.rs  new_scaffold.rs  readme_examples.rs  snapshot_util.rs  templates_snapshot.rs  wizard_tests.rs
crates/greentic-component/tests/contract/: mod.rs
crates/greentic-component/tests/contract/fixtures/component_v0_5_0/: README.md  component.manifest.json  component.wasm
crates/greentic-component/tests/contract/fixtures/component_v0_6_0/: README.md  component.manifest.json  component.wasm
crates/greentic-component/tests/contract/fixtures/component_v0_6_0/valid_inputs/: empty.json
crates/greentic-component/tests/fixtures/doctor/: bad_component_describe_hash_mismatch.cbor  bad_component_describe_missing_ops.cbor  bad_component_describe_unconstrained_schema.cbor  good_component_describe.cbor
crates/greentic-component/tests/fixtures/manifests/: valid.component.json
crates/greentic-component/tests/snapshots/: new_scaffold__scaffold_cargo_toml.snap  new_scaffold__scaffold_lib.snap  new_scaffold__scaffold_manifest.snap  new_scaffold__scaffold_wit.snap  templates_snapshot__templates_only_builtin_json.snap
crates/greentic-component/tests/support/: mod.rs
docs/: README.md  cli.md  component-developer-guide.md  component-testing.md  component_state.md  component_wizard.md  contract-tests.md
docs/vision/: README.md  legacy.md  v0.6.md
examples/component-wizard/hello-component/: Cargo.toml  Makefile  README.md
examples/component-wizard/hello-component/examples/: example.schema.json
examples/component-wizard/hello-component/src/: i18n.rs  lib.rs  qa.rs  schemas.rs
examples/component-wizard/hello-component/wit/: package.wit
target-check-new/debug/.fingerprint/allocator-api2-d2d40edbc9708475/: lib-allocator_api2  lib-allocator_api2.json
target-check-new/debug/.fingerprint/anyhow-0fcc2edeb2088058/: build-script-build-script-build  build-script-build-script-build.json
target-check-new/debug/.fingerprint/anyhow-716b5cb521a799d8/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-check-new/debug/.fingerprint/anyhow-e58a75e2bfe5bd8b/: lib-anyhow  lib-anyhow.json
target-check-new/debug/.fingerprint/arbitrary-7f4b68ffa12f6a48/: lib-arbitrary  lib-arbitrary.json
target-check-new/debug/.fingerprint/autocfg-28e65bde9d53b406/: lib-autocfg  lib-autocfg.json
target-check-new/debug/.fingerprint/bitflags-b5eee555c2adad00/: lib-bitflags  lib-bitflags.json
target-check-new/debug/.fingerprint/block-buffer-d49478cb554a1469/: lib-block_buffer  lib-block_buffer.json
target-check-new/debug/.fingerprint/bumpalo-b4a1471648509df7/: lib-bumpalo  lib-bumpalo.json
templates/tests/: matrix_spec.yaml
templates/tests/README/: README.md  sample.gtest
(+249 files in other folders)
