[workspace]
members = [
    "crates/greentic-component",
    "crates/component-manifest",
    "crates/component-store",
    "crates/component-runtime",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.3.4"
license = "MIT"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2"
assert_fs = "1"
async-trait = "0.1"
base64 = "0.22"
blake3 = "1.5"
bytes = "1.6"
clap = { version = "4.5", features = ["derive"] }
component-manifest = { version = "0.3", path = "crates/component-manifest" }
component-store = { version = "0.3", path = "crates/component-store" }
dashmap = "6"
directories = "6"
displaydoc = "0.2"
futures = "0.3"
greentic-interfaces = "0.4"
greentic-types = "0.3"
handlebars = "6"
hex = "0.4"
ignore = "0.4"
include_dir = { version = "0.7" }
insta = { version = "1.39", features = ["glob", "json"] }
jsonschema = "0.33.0"
miette = { version = "7.2", default-features = false, features = ["derive"] }
oci-distribution = "0.11"
once_cell = "1.19"
pathdiff = "0.2"
percent-encoding = "2.3"
predicates = "3"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
schemars = "1"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "2.0"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "sync", "fs", "time", "io-util"] }
tokio-util = "0.7"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
walkdir = "2"
wasm-encoder = "0.240"
wasm-metadata = "0.240"
wasmparser = "0.240"
wasmtime = { version = "38", default-features = false, features = ["component-model", "cranelift", "runtime"] }
wit-component = "0.240"
wit-parser = "0.240"
