[workspace]
members = [
    "crates/greentic-component",
    "crates/component-manifest",
    "crates/greentic-component-store",
    "crates/greentic-component-runtime",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.4.45"
license = "MIT"
rust-version = "1.90"

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
assert_fs = "1"
async-trait = "0.1"
base64 = "0.22"
blake3 = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
greentic-component-manifest = { version = "0.4", path = "crates/component-manifest" }
greentic-component-store = { version = "0.4",path = "crates/greentic-component-store" }
dashmap = "6"
directories = "6"
displaydoc = "0.2"
futures = "0.3"
greentic-interfaces-guest = "0.4"
greentic-interfaces-host = "0.4"
greentic-interfaces = "0.4"
greentic-interfaces-wasmtime = "0.4"
greentic-distributor-client = { version = "0.4", default-features = false, features = ["dist-client"] }
greentic-types = "0.4"
packc = "0.4"
handlebars = "6"
hex = "0.4"
ignore = "0.4"
include_dir = { version = "0.7" }
insta = { version = "1", features = ["glob", "json"] }
jsonschema = "0.40"
miette = { version = "7", default-features = false, features = ["derive"] }
oci-distribution = "0.11"
once_cell = "1"
pathdiff = "0.2"
percent-encoding = "2"
predicates = "3"
proptest = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
schemars = "1"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "fs", "time", "io-util"] }
tokio-util = "0.7"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
wasm-encoder = "0"
wasm-metadata = "0"
wasmparser = "0"
wasmtime = { version = "41", default-features = false, features = ["component-model", "cranelift", "runtime"] }
wasmtime-wasi = { version = "41" }
wit-component = "0.244.0"
wit-parser = "0.244.0"
