[package]
name = "component-manifest"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
serde = []

[dependencies]
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
url.workspace = true
regex.workspace = true
semver.workspace = true
jsonschema.workspace = true

[dev-dependencies]
anyhow.workspace = true
serde_json.workspace = true
