[package]
name = "greentic-component-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Wasmtime-based runtime for executing Greentic components"
repository = "https://github.com/greentic-ai/greentic-component"
homepage = "https://github.com/greentic-ai/greentic-component"
documentation = "https://github.com/greentic-ai/greentic-component"
keywords = ["greentic", "component", "wasm"]
categories = ["wasm"]

[features]
default = []
serde = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
greentic-component-manifest.workspace = true
greentic-component-store.workspace = true
futures.workspace = true
greentic-interfaces-host.workspace = true
greentic-types.workspace = true
jsonschema.workspace = true
base64.workspace = true
once_cell.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wit-component.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
schemars.workspace = true
