[package]
name = "greentic-component"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "High-level component loader and store for Greentic components"
repository = "https://github.com/greentic-ai/greentic-component"
homepage = "https://github.com/greentic-ai/greentic-component"
documentation = "https://docs.rs/greentic-component"
keywords = ["greentic", "component", "wasm"]
categories = ["wasm"]

[lib]
path = "src/lib.rs"

[features]
default = ["oci"]
oci = ["dep:oci-distribution"]
schema = ["dep:schemars"]

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
directories = "6"
hex = { workspace = true }
ignore = "0.4"
oci-distribution = { version = "0.11", optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
assert_fs = "1"
tempfile = "3"
tokio = { workspace = true }
