[package]
name = "greentic-component"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "High-level component loader and store for Greentic components"
repository = "https://github.com/greentic-ai/greentic-component"
homepage = "https://github.com/greentic-ai/greentic-component"
documentation = "https://docs.rs/greentic-component"
keywords = ["greentic", "component", "wasm"]
categories = ["wasm"]

[lib]
path = "src/lib.rs"

[features]
default = ["oci"]
oci = ["dep:oci-distribution"]
schema = ["dep:schemars"]
abi = ["dep:wit-component", "dep:wit-parser", "dep:wasmparser"]
describe = ["abi"]
loader = ["describe"]
prepare = ["loader", "dep:dashmap"]
cli = ["prepare", "dep:clap"]

[dependencies]
anyhow = { workspace = true }
blake3 = "1.5"
bytes = { workspace = true }
clap = { version = "4.5", features = ["derive"], optional = true }
directories = "6"
hex = { workspace = true }
ignore = "0.4"
jsonschema = { workspace = true }
oci-distribution = { version = "0.11", optional = true }
once_cell = { workspace = true }
regex = { workspace = true }
schemars = { workspace = true, optional = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
displaydoc = { workspace = true }
dashmap = { workspace = true, optional = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
wit-component = { workspace = true, optional = true }
wit-parser = { workspace = true, optional = true }
wasmparser = { workspace = true, optional = true }

[dev-dependencies]
assert_fs = "1"
tempfile = "3"
tokio = { workspace = true }
wasm-encoder = "0.240"
wasm-metadata = { workspace = true }
assert_cmd = "2"
predicates = "3"
