[package]
name = "hello-component"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.90"
description = "Greentic component hello-component"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.greentic]
abi_version = "0.6.0"

[dependencies]
greentic-interfaces-guest = { version = "0.4.93", features = ["component-v0-6"] }
greentic-types = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
